fix: popup width and close button sizing on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@ body, .mapboxgl-popup-content {
     font-size: 16px;
 }
 
+.mapboxgl-popup-close-button {
+    font-size: 1.2em;
+}
+
 /* From Bootstrap */
 .sr-only {
     position: absolute;
